--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "widgets",
+  "name": "seeder_demo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "per-env",
-    "start:development": "nodemon -r dotenv/config ./bin/www",
+    "start:development": "nodemon -r dotenv/config --inspect ./bin/www",
     "start:production": "node ./bin/www",
     "scss": "node-sass --watch ./public/scss -o ./public/stylesheets"
   },
